==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

 - Improved the resiliency of the retrieval of large results via HTTP. Queries
   are now aborted and result in an error if they consume too much memory.

 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

 - Changed the ``QueryStats`` JMX MBean to deliver node-based values instead of
   cluster-based values.
   This makes it possible to spot performance discrepancies between nodes more
   easily.

Fixes
=====

 - Fixed an issue that could cause ``sys.operations`` entries to remain even
   after the operation has finished.

 - Fixed a NPE when querying ``sys.shards`` table

 - Optimized the JMX ``QueryStats`` MBean to prevent it from putting too much
   load on the cluster.

 - Fixed the calculation of the ``OverallQueryAverageDuration`` ``QueryStats``
   MBean.

 - The internal ``fetchSize`` is now dynamic based on configured heap and has
   an upper bound to prevent ``OutOfMemory`` errors if a postgres client
   retrieves a large result set without setting a ``fetchSize``, or setting a
   ``fetchSize`` which is too large.

 - Log failed authentication attempts at log level ``WARN``